# rust-logger-performace

./: Cargo.toml  Makefile  bench.sh
config/: log4rs_file.yaml  log4rs_roll.yaml  log4rs_term.yaml
src/: main.rs
src/log_impl/: file.rs  mod.rs  term.rs
src/log_impl/file/: flexi_file.rs  flexi_file_async.rs  flexi_roll.rs  flexi_roll_async.rs  log4rs_file.rs  log4rs_roll.rs
src/log_impl/term/: env_term.rs  flexi_term.rs  log4rs_term.rs
src/slog_impl/: term.rs
src/slog_impl/term/: slog_term.rs
src/tracing_impl/: file.rs  term.rs
src/tracing_impl/file/: tracing_file_nb.rs  tracing_roll_nb.rs
src/tracing_impl/term/: tracing_term.rs
